# clingwrap

./: .cmake-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml
clingwrap/: __init__.py  action_list.py  launch_builder.py  launch_helpers.py  package.xml  param_helpers.py  static_analyzer.py  static_info.py
tests/: test_static_analysis.py
tests/fixtures/: basic_node.launch.py  composable_nodes.launch.py  global_namespaces.launch.py  include_target.launch.py  include_test.launch.py  namespace_nodes.launch.py  nested_namespaces.launch.py  topic_relays.launch.py
