<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clingwrap</name>
  <version>0.0.0</version>
  <description>A ROS2 launch wrapper to simplify writing python launch files.</description>
  <maintainer email="info@greenforgelabs.com.au">Alistair English</maintainer>
  <license>apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
